--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
 * {
   margin: 0;
@@ -7,29 +6,25 @@
   box-sizing: border-box;
 }
 
-:root{
-    --main-color:hsl(4, 100%, 67%);
-    --dark-slate-grey:hsl(234, 29%, 20%);
-    --charcoal-grey:hsl(235, 18%, 26%);
-    --grey:hsl(231, 7%, 60%);
-    --while:hsl(0, 0%, 100%);
+:root {
+  --main-color: hsl(4, 100%, 67%);
+  --dark-slate-grey: hsl(234, 29%, 20%);
+  --charcoal-grey: hsl(235, 18%, 26%);
+  --grey: hsl(231, 7%, 60%);
+  --while: hsl(0, 0%, 100%);
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    color: var(--dark-slate-grey);
+  font-family: "Roboto", sans-serif;
+  color: var(--dark-slate-grey);
 }
 .newsletter-content {
   margin: 1.5rem;
 }
 
-
-.hero__image{
-    width: 100%;
+.hero__image {
+  width: 100%;
 }
-
-
-
 
 .header {
   margin-bottom: 1rem;
@@ -37,7 +32,6 @@ body {
 
 .header__title {
   font-size: 32px;
- 
 }
 
 p {
@@ -83,7 +77,7 @@ label {
   border: 1px solid var(--grey);
 }
 .form__input:hover {
- cursor: pointer;
+  cursor: pointer;
 }
 
 .form__button {
@@ -94,21 +88,20 @@ label {
   font-weight: bold;
   background-color: var(--dark-slate-grey);
   border: 1px solid var(--dark-slate-grey);
-  
 }
 
-.form__button:hover, .form__button:focus{
+.form__button:hover,
+.form__button:focus {
   border: none;
-  background-image: linear-gradient(to right,#e6496e,var(--main-color));
+  background-image: linear-gradient(to right, #e6496e, var(--main-color));
   box-shadow: 0px 5px 15px #e6496e;
 }
 
-
-.form__label-container{
+.form__label-container {
   display: flex;
   justify-content: space-between;
 }
-.form__error{
+.form__error {
   color: red;
   font-size: 12px;
   font-weight: bold;
@@ -116,24 +109,23 @@ label {
 }
 
 .form__input:not(:placeholder-shown):invalid {
-    border-color: red;
-    background-color: rgba(255, 0, 0, 0.309);
-    color: red;
-  }
+  border-color: red;
+  background-color: rgba(255, 0, 0, 0.309);
+  color: red;
+}
 
-
-.success{
+.success {
   display: flex;
   flex-direction: column;
   justify-content: center;
   height: 100vh;
   margin: 32px;
 }
-.success > img{
+.success > img {
   width: 64px;
   margin-bottom: 32px;
 }
-.success > h1{
+.success > h1 {
   margin-bottom: 32px;
   font-size: xx-large;
 }
@@ -141,17 +133,14 @@ label {
   margin-top: 100%;
 }
 
-
-
 @media only screen and (min-height: 725px) {
-  body{
-
+  body {
     height: 100vh;
   }
-  .header{
+  .header {
     margin-bottom: 3rem;
   }
-  .header__title{
+  .header__title {
     font-size: 45px;
   }
   p {
@@ -160,8 +149,48 @@ label {
   }
   ul {
     margin-bottom: 5rem;
-  
   }
-  
+}
 
+@media only screen and (min-width: 1220px) {
+  body {
+    height: 100vh;
+    display: flex;
+    background-color: rgb(61, 55, 103);
+    align-items: center;
+    justify-content: center;
+  }
+  main {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
+    border-radius: 15px;
+  }
+  .header__title {
+    font-size: calc(45px * 1.5);
+  }
+  p{
+    font-size: 20px;
+    margin-bottom: 1rem;
+  }
+  .list-point {
+    width: 20px;
+    margin-right: 18px;
+  }
+  ul {
+    margin-bottom: 1rem;
+    list-style: none;
+  }
+  .form__input {
+    margin-bottom: 2rem;
+  }
+
+  .hero__image {
+    padding: 20px;
+  }
+  .newsletter-content{
+    padding: 36px;
+  }
 }
