--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ label {
     font-size: 18px;
   }
   ul {
-    margin-bottom: 5rem;
+    margin-bottom: 2rem;
   }
 }
 
@@ -192,5 +192,24 @@ label {
   }
   .newsletter-content{
     padding: 36px;
+  }
+  .success{
+    display: flex;
+    background-color: #fff;
+    border-radius: 15px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    width: 30%;
+    height: 70%;
+    padding: 50px;
+  }
+  .success > h1 {
+    margin-bottom: 32px;
+    font-size: 44px;
+  }
+  .success > .form__button {
+    width: 100%;
+    margin:0;
   }
 }
